all button active

--- a/index.html
+++ b/index.html
@@ -280,16 +280,16 @@
                             <div class="text-xl font-bold text-[#03071280]">B</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">B1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">B2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">B3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">B4</button>
                                 </div>
                             </div>
                         </div>
@@ -299,16 +299,16 @@
                             <div class="text-xl font-bold text-[#03071280]">C</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">C1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">C2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">C3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">C4</button>
                                 </div>
                             </div>
                         </div>
@@ -318,16 +318,16 @@
                             <div class="text-xl font-bold text-[#03071280]">D</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">D1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">D2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">D3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">D4</button>
                                 </div>
                             </div>
                         </div>
@@ -337,16 +337,16 @@
                             <div class="text-xl font-bold text-[#03071280]">E</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">E1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">E2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">E3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">E4</button>
                                 </div>
                             </div>
                         </div>
@@ -356,16 +356,16 @@
                             <div class="text-xl font-bold text-[#03071280]">F</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">F1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">F2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">F3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">F4</button>
                                 </div>
                             </div>
                         </div>
@@ -375,16 +375,16 @@
                             <div class="text-xl font-bold text-[#03071280]">G</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">G1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">G2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">G3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">G4</button>
                                 </div>
                             </div>
                         </div>
@@ -394,16 +394,16 @@
                             <div class="text-xl font-bold text-[#03071280]">H</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">H1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">H2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">H3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">H4</button>
                                 </div>
                             </div>
                         </div>
@@ -413,16 +413,16 @@
                             <div class="text-xl font-bold text-[#03071280]">I</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">I1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">I2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">I3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">I4</button>
                                 </div>
                             </div>
                         </div>
@@ -539,8 +539,8 @@
                                 <div class="label">
                                     <span class="label-text">Phone Number*</span>
                                 </div>
-                                <input type="text" placeholder="Enter your phone number"
-                                    class="input input-bordered w-full " />
+                                <input id="phoneNumber" type="number" placeholder="Enter your phone number"
+                                    class="input input-bordered w-full " required />
 
                             </label>
                         </div>
