--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body class="interFont">
 
     <!-- header section start  -->
-    <header class="mb-28">
+    <header id="headerSection" class="mb-28">
         <div class="container mx-auto">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -69,7 +69,7 @@
             </div>
 
             <!-- slider section start  -->
-            <section class="">
+            <section id="sliderSection" class="">
                 <div class="hero min-h-screen rounded-3xl" style="background-image: url(./images/banner.png);">
                     <!-- <div class="hero-overlay bg-opacity-60 rounded-3xl"></div> -->
                     <div class="hero-content text-center text-neutral-content">
@@ -94,7 +94,26 @@
     <!-- header section end  -->
 
 
-    <main class="container mx-auto">
+    <section id="successId" class="container mx-auto flex items-center justify-center min-h-screen hidden">
+        <div class="flex flex-col items-center justify-center border-2 border-primaryColor px-20 py-14 rounded-xl">
+            <div class="mb-10">
+                <img src="./images/success.png" alt="img">
+            </div>
+            <div class="text-center space-y-2">
+                <h3 class="text-[#27AE60] font-extrabold text-2xl mb-6">SUCCESS</h3>
+                <p class="text-xl font-semibold">Thank you for Booking Our Bus Seats. <br>
+                    We are working hard to find the best service and deals for you.</p>
+                <p>Shortly you will find a confirmation in your email.</p>
+            </div>
+            <div class="mt-5">
+                <button id="continueSuccessBtn" class="btn bg-[#27AE60] text-white px-24 py-5">Continue</button>
+            </div>
+        </div>
+    </section>
+
+
+
+    <main id="mainSection" class="container mx-auto">
 
         <!-- Best offers for you section  -->
         <section>
@@ -432,16 +451,16 @@
                             <div class="text-xl font-bold text-[#03071280]">J</div>
                             <div class="flex-1 flex justify-between">
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J1</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">J1</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J2</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">J2</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J3</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">J3</button>
                                 </div>
                                 <div><button
-                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J4</button>
+                                        class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl seatBtn">J4</button>
                                 </div>
                             </div>
                         </div>
@@ -505,23 +524,35 @@
 
 
 
-                        <div id="grandTotalInputHidden" class="flex py-6">
+                        <div id="grandTotalInputHidden" class="flex py-6 ">
                             <label class="input flex items-center gap-2 w-full">
                                 <input id="cupponInputData" type="text" class="grow" placeholder="Have any copupon?" />
                                 <button id="cupponBtn" class="btn bg-primaryColor m-y-2" disabled>Apply</button>
                             </label>
                         </div>
+
                         <!-- single line  -->
-                        <div id="discountShow" class="flex py-6 hidden">
-                            <p id="discoutP" class="flex justify-end items-end"></p>
+                        <div id="discountShow" class="flex justify-between py-6 hidden">
+                            <p class="ralewayFont font-semibold text-[#03071299] text-xl text-primaryColor">Discount</p>
+                            <p class="ralewayFont font-semibold text-[#03071299] text-xl text-primaryColor">BDT <span
+                                    id="discoutP">0</span>
+                            </p>
                         </div>
+
+
+
+
+
+
+
                         <!-- single line  -->
                         <div class="flex justify-between ">
                             <div>
                                 <p class="ralewayFont font-bold text-[#030712]">Grand Total</p>
                             </div>
                             <div>
-                                <h4 class="ralewayFont font-bold text-[#030712]">BDT <span id="grandTotal">0</span>
+                                <h4 class="ralewayFont font-bold text-[#030712]">BDT <span id="grandTotal"
+                                        class="text-xl">0</span>
                                 </h4>
                             </div>
                         </div>
@@ -582,7 +613,7 @@
     </main>
 
 
-    <footer class="bg-black text-white">
+    <footer id="footerSection" class="bg-black text-white hidden">
         <section class="container mx-auto py-32 space-y-4">
             <div class="flex justify-between items-center border-dashed border-b-2 border-[#FFFFFF4D]">
                 <div class="space-y-6 mb-6">
