remove add event set korte parsi na

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>easy e ticket</title>
+    <title>easy-e-ticket</title>
 
     <!-- daisyUI from CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -52,7 +52,7 @@
                             <li><a>Search</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-xl">P-Ticket</a>
+                    <a class="btn btn-ghost text-xl">Easy-e-Ticket</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
@@ -613,7 +613,7 @@
     </main>
 
 
-    <footer id="footerSection" class="bg-black text-white hidden">
+    <footer id="footerSection" class="bg-black text-white">
         <section class="container mx-auto py-32 space-y-4">
             <div class="flex justify-between items-center border-dashed border-b-2 border-[#FFFFFF4D]">
                 <div class="space-y-6 mb-6">
