note more then 4 seat done

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                 <p>Shortly you will find a confirmation in your email.</p>
             </div>
             <div class="mt-5">
-                <button id="continueSuccessBtn" class="btn bg-[#27AE60] text-white px-24 py-5">Continue</button>
+                <a href="./index.html">
+                    <button id="continueSuccessBtn" class="btn bg-[#27AE60] text-white px-24 py-5">Continue</button>
+                </a>
             </div>
         </div>
     </section>
@@ -576,7 +578,7 @@
                                     <span class="label-text">Phone Number*</span>
                                 </div>
                                 <input id="phoneNumber" type="number" placeholder="Enter your phone number"
-                                    class="input input-bordered w-full " required />
+                                    class="input input-bordered w-full " required>
 
                             </label>
                         </div>
