some color added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <li><a>Search</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-xl">Easy-e-Ticket</a>
+                    <a class="btn btn-ghost text-3xl font-extrabold ralewayFont">Easy-e-Ticket</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
@@ -63,8 +63,10 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <button class="btn bg-[#1DD10066] text-primaryColor border-2 border-primaryColor">Bus <img
-                            src="./images/busBtnLogo.png" alt="bus-logo"></button>
+                    <button class="btn bg-[#1DD10066] text-primaryColor border-2 border-primaryColor px-8  ">
+                        Bus
+                        <img src="./images/busBtnLogo.png" alt="bus-logo" class="ml-3">
+                    </button>
                 </div>
             </div>
 
@@ -152,14 +154,14 @@
                 </div>
 
             </div>
-            <div class="text-center mt-12">
+            <div class="text-center mt-16 mb-28">
                 <button class="btn text-primaryColor bg-white border-primaryColor">See All Offers</button>
             </div>
         </section>
 
 
         <!-- easey poribohon section start  -->
-        <section id="easyParibohon" class="bg-[#F7F8F8] mt-28">
+        <section id="easyParibohon" class="bg-[#F7F8F8] pt-28 rounded-3xl border-t-4 border-primaryColor">
             <!-- easy section heading  -->
             <div class="text-center mb-12">
                 <h1 class="text-5xl ralewayFont font-extrabold mb-6">EASY Paribahan</h1>
