banar section colpleted

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <!-- slider section start  -->
             <section id="sliderSection" class="">
-                <div class="hero min-h-screen rounded-3xl" style="background-image: url(./images/banner.png);">
+                <div class="hero min-h-screen rounded-3xl relative" style="background-image: url(./images/banner.png);">
                     <!-- <div class="hero-overlay bg-opacity-60 rounded-3xl"></div> -->
                     <div class="hero-content text-center text-neutral-content">
                         <div class="w-[742px] space-y-7">
@@ -86,6 +86,63 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- position item code  -->
+                    <div class="absolute bottom-[-50px] left-0 flex items-center justify-center w-full">
+
+
+                        <div class="grid grid-cols-3 gap-6">
+                            <!-- single item -->
+                            <div
+                                class="flex flex-col justify-center items-center lg:items-start lg:justify-start lg:flex-row gap-5 bg-white py-8 pl-8 pr-14 border-2 rounded-2xl">
+
+                                <img src="./images/people.png" alt="" class="">
+                                <div class="space-y-3">
+                                    <div>
+                                        <h2 class="text-xl font-extrabold text-primary-text-color">500K+
+                                        </h2>
+                                    </div>
+                                    <div>
+                                        <p>Registered users </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single item -->
+                            <div
+                                class="flex flex-col justify-center items-center lg:items-start lg:justify-start lg:flex-row gap-5 bg-white py-8 pl-8 pr-14 border-2 rounded-2xl">
+
+                                <img src="./images/ticket-cupon.png" alt="" class="">
+                                <div class="space-y-3">
+                                    <div>
+                                        <h2 class="text-xl font-extrabold text-primary-text-color">1.7 lacks
+                                        </h2>
+                                    </div>
+                                    <div>
+                                        <p>Tickets sold</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single item -->
+                            <div
+                                class="flex flex-col justify-center items-center lg:items-start lg:justify-start lg:flex-row gap-5 bg-white py-8 pl-8 pr-14 border-2 rounded-2xl">
+
+                                <img src="./images/stoppage.png" alt="" class="">
+                                <div class="space-y-3">
+                                    <div>
+                                        <h2 class="text-xl font-extrabold text-primary-text-color">80K+
+                                        </h2>
+                                    </div>
+                                    <div>
+                                        <p>Rental partners</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
                 </div>
             </section>
             <!-- slider section end  -->
