--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
                                 <img class="w-[68.57px] h-[48px]" src="./images/bus-logo.png" alt="img">
                             </div>
                             <div class="">
-                                <h2 class="ralewayFont font-extrabold text-3xl">Greenline Paribahan</h2>
+                                <h2 class="ralewayFont font-extrabold text-3xl">EASY Paribahan</h2>
                                 <p class="font-light">Coach-009-WEB ! AC_Business</p>
                             </div>
                         </div>
 
                         <div>
-                            <button class="btn bg-[#1DD10026] text-primaryColor"><img src="./images/seat-green.png"
+                            <button class="btn bg-[#1DD1001A] text-primaryColor"><img src="./images/seat-green.png"
                                     alt="bus-logo"> <span id="seatAvailableNow">40</span> Seats left</button>
                         </div>
                     </div>
