--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="text-center mb-12">
                 <h1 class="text-5xl ralewayFont font-extrabold">Best offers for you</h1>
             </div>
-            <div class="flex justify-between">
+            <div class="flex flex-col gap-8 lg:gap-0 lg:flex-row justify-between">
                 <!-- single item -->
                 <div class="flex bg-[#FFBF0F] items-center justify-center rounded-2xl">
                     <div class=" p-14">
