font size changed

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <img src="./images/people.png" alt="" class="">
                                 <div class="space-y-3">
                                     <div>
-                                        <h2 class="text-xl font-extrabold text-primary-text-color">500K+
+                                        <h2 class="text-4xl font-extrabold text-primary-text-color">500K+
                                         </h2>
                                     </div>
                                     <div>
@@ -115,7 +115,7 @@
                                 <img src="./images/ticket-cupon.png" alt="" class="">
                                 <div class="space-y-3">
                                     <div>
-                                        <h2 class="text-xl font-extrabold text-primary-text-color">1.7 lacks
+                                        <h2 class="text-4xl font-extrabold text-primary-text-color">1.7 lacks
                                         </h2>
                                     </div>
                                     <div>
@@ -130,7 +130,7 @@
                                 <img src="./images/stoppage.png" alt="" class="">
                                 <div class="space-y-3">
                                     <div>
-                                        <h2 class="text-xl font-extrabold text-primary-text-color">80K+
+                                        <h2 class="text-4xl font-extrabold text-primary-text-color">80K+
                                         </h2>
                                     </div>
                                     <div>
